temporarily fixes paragraph spacing

--- a/packages/cms/src/cms.css
+++ b/packages/cms/src/cms.css
@@ -439,8 +439,8 @@
 
 
 /* TODO: redo all/most of this */
-.cms-paragraph {
-  & div {
+.cms-paragraphs {
+  & p {
     margin-bottom: 0.25em;
   }
 }
